--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "form-data": "^4.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
-    "razorpay": "^2.9.5",
-    "svix": "^1.40.0"
+    "razorpay": "^2.9.5"
   }
 }
