--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "form-data": "^4.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.1",
-    "razorpay": "^2.9.5"
+    "mongoose": "^8.8.1"
   }
 }
